-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 11.0.3, Qt Creator 12.0.0
-
None
-
Windows 10 Pro 22H2 (also on Windows 11 Pro)
-
-
d8b8c1d8a (12.0)
If you want to edit a file with QtCreator it takes about 2-3 seconds to enter the first character. After that the reaction time is normally (fast). Switching then to another file also lasts about 2-3 seconds. Also when switching back to the open file.
The linux and mac versions behave normally.
For Gerrit Dashboard: QTCREATORBUG-29999 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
528298,3 | Core: Use icon based on document's full path | 12.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |