Core: Use icon based on document's full path

This makes a difference when one wants to e.g. mark non existing files.

Fixes: QTCREATORBUG-29999
Change-Id: Id7c2a53fa91fb9638e9a08a746614a3f04da400f
Reviewed-by: Eike Ziller <eike.ziller@qt.io>
(cherry picked from commit 13f5367611af2084eca5202428f1e0cacec9f0bf)
Reviewed-by: David Schulz <david.schulz@qt.io>